Updated GitIgnore with .idea and VSConfig exclusions

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,9 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
+# VS Config
+*.vsconfig
+
+# IDEA specific
+.idea/*
